--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <!-- E-Wallet CSS -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
     <title>E-Wallet</title>
-    <link rel="icon" href="imagens/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/imagens/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="back">
