--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <!-- E-Wallet CSS -->
-    <link rel="stylesheet" href="/css/index.css">
+    <link type="text/css" rel="stylesheet" href="/css/index.css">
     <title>E-Wallet</title>
     <link rel="icon" href="/imagens/favicon.ico" type="image/x-icon" />
   </head>
@@ -21,7 +21,7 @@
           <div class="principal container">
                 <div class="row">
                   <div class="es col-3">
-                    <img src="imagens/logo4.png" alt="">
+                    <img src="/imagens/logo4.png" alt="">
                   </div>
                   <div class="me col-7">
                     <form action="#">
