--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="principal container">
                 <div class="row">
                   <div class="es col-3">
-                    <img src="logo4.png" alt="">
+                    <img src="Logo4.png" alt="">
                   </div>
                   <div class="me col-7">
                     <form action="#">
