--- a/index.html
+++ b/index.html
@@ -12,107 +12,74 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <!-- E-Wallet CSS -->
-    <link type="text/css" rel="stylesheet" href="index.css">
+    <link type="text/css" rel="stylesheet" href="css/index.css">
     <title>E-Wallet</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="imagens/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <div class="back">
-          <div class="principal container">
-                <div class="row">
-                  <div class="es col-3">
-                    <img src="/Logo4.png" alt="">
-                  </div>
-                  <div class="me col-7">
-                    <form action="#">
-                      <div class="input-group mb-3" id="pesquisar">
+      <header>
+      <div class="container">
+            <div class="row">
+                <div id="div_logo" class="col-sm-3">
+                    <img class="logo" src="/imagens/Logo4.png" alt="">
+                    <img class="logo_min" src="/imagens/LogoMin.png" alt="">
+                </div>
+                <div id="div_search" class="col-sm-7">
+                    <form id="form_search" action="#">
+                      <div class="input-group mb-3" id="search">
                         <input type="text" class="form-control" placeholder="O que está procurando?" aria-label="Recipient's username" aria-describedby="basic-addon2">
                         <div class="input-group-append">
                           <button class="btn btn-outline-secondary" type="button">Pesquisar</button>
                         </div>
                       </div>
-                    </form>
-                  </div>
-                  <div class="di col-2">
+                    </form>    
+                </div>
+                <div id="div_dados" class="col-sm-2">
                     <center>
                       <div class="dados">
                         <i class="fas fa-user fa-lg"></i>
                         Minha Conta 
                         <i class="fas fa-angle-down fa-sm"></i>
                       </div>
-                  </center>
-                  </div>
+                  </center>    
                 </div>
-
-                <div class="row">
-                  <div class="col-12" id="navbar">
-                    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                          <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Gerenciamento</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Departamentos</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Empresas</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Sobre</a>
-                          </li>
-                        </ul>
-                      </div>
+            </div>    
+      </div>
+      </header>
+      
+      <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Gerenciamento</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Departamentos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Empresas</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Sobre</a>
+                                </li>
+                            </ul>
+                        </div>
                     </nav>
-                  </div>
                 </div>
-              <div class="container" id="corpo">
-                <div class="row">
-                  <div class="col-6" id="esquerda">
-                   <h1>Identificação</h1> 
-                   <br>
-                     <div class="login">
-                      <center><h4>  <i class="fas fa-user fa-xs"></i> &nbsp;Já sou cadastrado!</h4></center>
-                        <form>
-                          <div class="form-group">
-                            <label for="exampleInputEmail1">Endereço de E-mail</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Endereço de E-mail">
-                          </div>
-                          <div class="form-group">
-                            <label for="exampleInputPassword1">Senha</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-                          </div>
-                          <button type="submit" class="btn btn-primary">Entrar</button>
-                        </form> 
-                     </div>
-                  </div>
-                  <div class="col-6" id="direita">
-                     <br><br><br><br>
-                       <div class="login">
-                        <center><h4>  <i class="fas fa-address-card fa-xs"></i> &nbsp;Ainda não sou cadastrado!</h4></center>
-                          <form>
-                            <div class="form-group">
-                              <label for="exampleInputEmail1">Digite seu endereço de E-mail para iniciar o cadastro.</label>
-                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Endereço de E-mail">
-                            </div>
-                            <button type="submit" class="btn btn-primary">Entrar</button>
-                          </form> 
-                       </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-    </div>
-
-<footer >
-<center> E-WALLET © Todos os direitos reservados. 2018 </center> 
-</footer>
+            </div>  
+        </div>  
+      </main>
+        
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
