--- a/index.html
+++ b/index.html
@@ -18,33 +18,61 @@
   </head>
   <body>
       <header>
-      <div class="container">
-            <div class="row">
-                <div id="div_logo" class="col-sm-3">
-                    <img class="logo" src="/imagens/Logo4.png" alt="">
-                    <img class="logo_min" src="/imagens/LogoMin.png" alt="">
+          <div class="row">
+            <div class="col-sm-12">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu_mobile">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNav">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Gerenciamento</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Departamentos</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Empresas</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Sobre</a>
+                                    </li>
+                                </ul>
+                            </div>
+                </nav>    
                 </div>
-                <div id="div_search" class="col-sm-7">
-                    <form id="form_search" action="#">
-                      <div class="input-group mb-3" id="search">
-                        <input type="text" class="form-control" placeholder="O que está procurando?" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                        <div class="input-group-append">
-                          <button class="btn btn-outline-secondary" type="button">Pesquisar</button>
+            </div>
+              <div class="container">
+                    <div class="row">
+                        <div id="div_logo" class="col-sm-3">
+                            <img class="logo" src="/imagens/Logo4.png" alt="">
+                            <img class="logo_min" src="/imagens/LogoMin.png" alt="">
                         </div>
-                      </div>
-                    </form>    
-                </div>
-                <div id="div_dados" class="col-sm-2">
-                    <center>
-                      <div class="dados">
-                        <i class="fas fa-user fa-lg"></i>
-                        Minha Conta 
-                        <i class="fas fa-angle-down fa-sm"></i>
-                      </div>
-                  </center>    
-                </div>
-            </div>    
-      </div>
+                        <div id="div_search" class="col-sm-7">
+                            <form id="form_search" action="#">
+                              <div class="input-group mb-3" id="search">
+                                <input type="text" class="form-control" placeholder="O que está procurando?" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                <div class="input-group-append">
+                                  <button class="btn btn-outline-secondary" type="button">Pesquisar</button>
+                                </div>
+                              </div>
+                            </form>    
+                        </div>
+                        <div id="div_dados" class="col-sm-2">
+                            <center>
+                              <div class="dados">
+                                <i class="fas fa-user fa-lg"></i>
+                                Minha Conta 
+                                <i class="fas fa-angle-down fa-sm"></i>
+                              </div>
+                          </center>    
+                        </div>
+                    </div>    
+              </div>
       </header>
       
       <main>
