--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
     <!-- E-Wallet CSS -->
     <link type="text/css" rel="stylesheet" href="css/index.css">
-    <title>E-Wallet - Login</title>
+    <title>E-Wallet - Home</title>
     <link rel="icon" href="imagens/favicon.ico" type="image/x-icon" />
   </head>
   <body>
@@ -64,7 +64,7 @@
                             <center>
                               <div class="dados">
                                 <i class="fas fa-user fa-lg"></i>
-                                  <a href="index.html"><font face="Eras ITC">Minha Conta</font></a>
+                                <a href="index.html"><font face="Eras ITC">Minha Conta</font></a>
                                 <i class="fas fa-angle-down fa-sm"></i>
                               </div>
                           </center>    
@@ -74,7 +74,7 @@
       </header>
       
       <main>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #e3f2fd;" id="menu">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -82,7 +82,7 @@
                             <div class="container">
                                 <ul class="navbar-nav">
                                     <li class="nav-item active">
-                                        <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">Gerenciamento</a>
@@ -99,46 +99,79 @@
                                 </ul>
                             </div>
                         </div>
-            </nav>
-        <div class="container">  
+                    </nav>
+        <div class="container">
             <div class="container" id="forms">
-                <br>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <center><h1><font face="Eras ITC">Identificação</font></h1></center>
+                <div class="row">
+                    <div class="col-sm-3" id="filtro">
+                        <div class="filtro_border">
+                            <center><h4 id="categorias_titulo">Categorias</h4></center>
+                            <div class="container" id="car_interno">
+                                <div class="row">
+                                    <div class="icons col-sm-4">
+                                        <center>
+                                            <a href="#" class="links"><i class="fas fa-car fa-2x"></i></a>
+                                            <h3 id="carros">Automóveis</h3>
+                                        </center>
+                                    </div>
+                                    <div class="icons col-sm-4">
+                                        <center>
+                                            <a href="#" class="links"><i class="fas fa-home fa-2x"></i></a>
+                                            <h3 id="carros">Casas</h3>
+                                        </center>
+                                        </div>
+                                    <div class="icons col-sm-4">
+                                        <center>
+                                            <a href="#" class="links"><i class="fas fa-graduation-cap fa-2x"></i></a>
+                                            <h3 id="carros">Graduações</h3>
+                                        </center>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="icons col-sm-4">
+                                        <center>
+                                                <a href="#" class="links"><i class="fab fa-fort-awesome fa-2x"></i></a>
+                                                <h3 id="carros">Viagens</h3>
+                                        </center>
+                                    </div>
+                                    <div class="icons col-sm-4">
+                                        <center>
+                                                <a href="#" class="links"><i class="fas fa-mobile-alt fa-2x"></i></a>
+                                                <h3 id="carros">Celulares</h3>
+                                        </center>    
+                                    </div>
+                                    <div class="icons col-sm-4">
+                                        <center>
+                                                <a href="#" class="links"><i class="fas fa-couch fa-2x"></i></a>
+                                                <h3 id="carros">Móveis</h3>
+                                        </center> 
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="icons col-sm-4">
+                                        <center>
+                                                <a href="#" class="links"><i class="fab fa-fort-awesome fa-2x"></i></a>
+                                                <h3 id="carros">Celulares</h3>
+                                        </center> 
+                                    </div>
+                                    <div class="icons col-sm-4">
+                                        <center>
+                                                <a href="#" class="links"><i class="fab fa-fort-awesome fa-2x"></i></a>
+                                                <h3 id="carros">Celulares</h3>
+                                        </center> 
+                                    </div>
+                                    <div class="icons col-sm-4">
+                                        <center>
+                                                <a href="#" class="links"><i class="fab fa-fort-awesome fa-2x"></i></a>
+                                                <h3 id="carros">Celulares</h3>
+                                        </center> 
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                <div class="row"> 
-                    <div class="col-sm-6" id="es">
-                        <div class="login">
-                          <center><h4>  <i class="fas fa-user fa-xs"></i> &nbsp;Já sou cadastrado!</h4></center>
-                            <form>
-                              <div class="form-group">
-                                <label for="exampleInputEmail1">Endereço de E-mail</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Endereço de E-mail">
-                              </div>
-                              <div class="form-group">
-                                <label for="exampleInputPassword1">Senha</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-                              </div>
-                              <button type="submit" class="btn btn-primary">Entrar</button>
-                            </form> 
-                         </div>
-                    </div>
-                    <div class="col-sm-6" id="di">
-                     <div class="login">
-                        <center><h4>  <i class="fas fa-address-card fa-xs"></i> &nbsp;Ainda não sou cadastrado!</h4></center>
-                          <form>
-                            <div class="form-group">
-                              <label for="exampleInputEmail1">Digite seu endereço de E-mail para iniciar o cadastro.</label>
-                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Endereço de E-mail">
-                            </div>
-                            <button type="submit" class="btn btn-primary">Entrar</button>
-                          </form> 
-                          <br>
-                            <button type="submit" class="btn btn-primary" id="botao_face"><i class="fab fa-facebook-square"></i> &nbsp; Cadastrar com o Facebook</button>
-                         <br><br>
-                    </div>
+                    <div class="col-sm-9" id="destaques">
+                        asdasd
                     </div>
                 </div>
             </div>
